# gmai-cleaner

./: .gitignore  README.org  clean_gmail.py  pyproject.toml
.credentials/: README.md
ai-assist/: 001.md  002.md
