[tool.poetry]
name = "gmail-cleaner"
version = "0.1.0"
description = "Simple app to clean stuff out of gmail"
authors = ["George Mauer <gmauer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.82.0"
google-auth = "^2.16.2"

[tool.poetry.dev-dependencies]
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
